hphp/hack/test/typecheck/pipe_operator_not_leaking_dollardollar.php.exp
File "pipe_operator_not_leaking_dollardollar.php", line 13, characters 14-15:
Variable $$ is undefined, or not always defined (Naming[2050])
